--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -85,6 +85,11 @@
             <scope>provided</scope>
             <classifier>remapped-mojang</classifier> <!-- Important! -->
         </dependency>
+        <dependency>
+            <groupId>dev.efekos.arn</groupId>
+            <artifactId>arn-common</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
