--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>common</module>
         <module>spigot</module>
+        <module>paper</module>
     </modules>
 
     <properties>
