--- a/common/pom.xml
+++ b/common/pom.xml
@@ -24,6 +24,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
 
 </project>
