--- a/paper/pom.xml
+++ b/paper/pom.xml
@@ -28,6 +28,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
 
     <dependencies>
