--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -28,6 +28,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
 
     <build>
